--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ discrete_mathematics.log
 discrete_mathematics.out
 discrete_mathematics.synctex.gz
 discrete_mathematics.aux
+discrete_mathematics 2.synctex.gz
+seminars/sem14 2.log
+seminars/sem14.fdb_latexmk
+seminars/sem14.fls
+seminars/sem14.out
+seminars/sem14.log
+seminars/sem14.pdf
+seminars/sem14.synctex.gz
+seminars/sem14.aux
