--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@ seminars/sem14.log
 seminars/sem14.pdf
 seminars/sem14.synctex.gz
 seminars/sem14.aux
+discrete_mathematics.tex
+seminars/sem15.aux
+seminars/sem15.fdb_latexmk
+seminars/sem15.fls
+seminars/sem15.log
+seminars/sem15.out
+seminars/sem15.synctex.gz
+discrete_mathematics.pdf
+.gitignore
+seminars/sem15.pdf
